# s3c2400-bsp

./: s3c2400.cfg
s3c2400/: Makefile.am  configure.ac
s3c2400/clock/: Makefile.am  clockdrv.c  speed.c
s3c2400/console/: Makefile.am
s3c2400/include/: Makefile.am  bsp.h  s3c2400.h
s3c2400/irq/: Makefile.am  bsp_irq_asm.S  bsp_irq_init.c  irq.c  irq.h
s3c2400/start/: Makefile.am  start.S
s3c2400/startup/: Makefile.am  bspstart.c  linkcmds  mmu.c  mmu.h
s3c2400/timer/: Makefile.am
s3c2400/wrapup/: Makefile.am
